Update README.md
added instructions